<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Assignment03</string>
    <string name="cacheid_text">ID:</string>
    <string name="cachename_text">Name:</string>
    <string name="cachecreator_text">Creator:</string>
    <string name="cachetype_text">Type:</string>
    <string name="setastargetbutton_text">Set as target</string>
    <string name="addnotebutton_text">Add note</string>
    <string name="viewnotesbutton_text">View notes &amp; visits</string>
    <string name="logvisitbutton_text">Log visit</string>
    <string name="targetsetmessage_text">Target set</string>
    
    <string name="menu_distancetotarget_text">Distance to target</string>
    <string name="menu_centertomylocation_text">Go to my location</string>
    <string name="menu_compassview_text">Compass view</string>
    
    <string name="message_targetcachenostset_text">Target cache not set</string>
    <string name="message_distancetotarget_text">Distance to target: </string>
    <string name="message_nolocationfix_text">No GPS fix!</string>
    
    <string name="notes_title_text">Title</string>
    <string name="notes_text_text">Note</string>
    <string name="notes_date_text">Date</string>
    <string name="notes_savenotebutton_text">Save note</string>
    <string name="notes_changedatebutton_text">Change date</string>
    
    <string name="log_title_text">Title</string>
    <string name="log_text_text">Comment</string>
    <string name="log_date_text">Date</string>
    <string name="log_type_text">Type</string>
    <string name="log_savevisitbutton_text">Save log</string>
    <string name="log_changedatebutton_text">Change date</string>
    <string name="log_changetypebutton_text">Change type</string>
    
    <string name="logtypedialog_title">Log type</string>
    <string name="logtype_found">Found</string>
    <string name="logtype_didnotfind">Did not find</string>
    <string name="logtypedialog_buttontext">Ok</string>
    <string name="nocaches_text">No caches</string>
</resources>
