<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
  <TextView android:id="@+id/logtitle_label"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:text="@string/log_title_text"
  			android:lines="1"/>
  <EditText android:id="@+id/logtitle_text"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:singleLine="true" />
  <TextView android:id="@+id/logdatetitle_text"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:text="@string/log_date_text"/>
  <LinearLayout android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:orientation="horizontal">
  		<TextView android:id="@+id/logdate_value"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:layout_weight="1"
  			android:gravity="center" />
  		<Button android:id="@+id/ChangeDateButton"
  		  android:layout_width="fill_parent"
  		  android:layout_height="wrap_content"
  		  android:layout_weight="1"
  		  android:text="@string/log_changedatebutton_text"
  		  android:onClick="openDatePickerDialog" />
  </LinearLayout>
    <TextView android:id="@+id/logtypetitle_text"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:text="@string/log_type_text"/>
    <LinearLayout android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:orientation="horizontal">
  		<TextView android:id="@+id/logtype_value"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:layout_weight="1"
  			android:gravity="center" />
  		<Button android:id="@+id/ChangeTypeButton"
  		  android:layout_width="fill_parent"
  		  android:layout_height="wrap_content"
  		  android:layout_weight="1"
  		  android:text="@string/log_changetypebutton_text"
  		  android:onClick="openLogTypeDialog" />
  </LinearLayout>
  <TextView android:id="@+id/logeditcomment_label"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:text="@string/log_text_text"/>
  <EditText android:id="@+id/logeditcomment_text"
  			android:layout_width="fill_parent"
  			android:layout_height="wrap_content"
  			android:layout_weight="1"
  			android:gravity="top" />
  <Button android:id="@+id/SaveLogButton"
  		  android:layout_width="fill_parent"
  		  android:layout_height="wrap_content"
  		  android:text="@string/log_savevisitbutton_text" />
</LinearLayout>
