<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
		  <LinearLayout android:layout_width="fill_parent"
		  				android:layout_height="wrap_content"
		  				android:orientation="horizontal">
		 	<TextView android:id="@+id/cachename_text"
		  		android:layout_width="wrap_content" 
		  		android:layout_height="wrap_content"
		  		android:text="@string/cachename_text"/>
		  	<TextView android:id="@+id/cachename_value"
		  		android:layout_width="wrap_content"
		  		android:layout_height="wrap_content"
		  		/>
		  </LinearLayout>
		<LinearLayout android:layout_width="fill_parent"
		  				android:layout_height="wrap_content"
		  				android:orientation="horizontal">
		 	<TextView android:id="@+id/cachecreator_text"
		  		android:layout_width="wrap_content" 
		  		android:layout_height="wrap_content"
		  		android:text="@string/cachecreator_text"/>
		  	<TextView android:id="@+id/cachecreator_value"
		  		android:layout_width="wrap_content"
		  		android:layout_height="wrap_content"
		  		/>
		  </LinearLayout>
		  <LinearLayout android:layout_width="fill_parent"
		  				android:layout_height="wrap_content"
		  				android:orientation="horizontal">
		 	<TextView android:id="@+id/cachetype_text"
		  		android:layout_width="wrap_content" 
		  		android:layout_height="wrap_content"
		  		android:text="@string/cachetype_text"/>
		  	<TextView android:id="@+id/cachetype_value"
		  		android:layout_width="wrap_content"
		  		android:layout_height="wrap_content"
		  		/>
		  </LinearLayout>
		<Button android:text="@string/setastargetbutton_text" 
			android:id="@+id/Button01" 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent" />
</LinearLayout>

